tests/outref/TCEF01_errors.ref
-- TCEF01 : OCTO539 : COALESCE

-- The queries in this query file are either invalid queries
-- or do not have the same behavior as postgres.

-- Passing no arguments is an error
SELECT COALESCE();
-- Invalid column name
SELECT COALESCE(invalid_column) FROM names;
-- Different types are errors
SELECT COALESCE(NULL, 'a', 1.2);
SELECT COALESCE('a', 1.2, 1);
SELECT COALESCE(NULL, 1, 'a');
LINE 3:1: SELECT COALESCE();
                          ^
syntax error, unexpected RIGHT_PAREN
[ERROR] PATH:LINENUM DATE TIME: ERR_UNKNOWN_COLUMN_NAME: Unknown column: INVALID_COLUMN
LINE 4:1: SELECT COALESCE(invalid_column) FROM names;
                          ^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME: ERR_TYPE_MISMATCH: Type mismatch: left VARCHAR, right NUMERIC
LINE 5:1: SELECT COALESCE(NULL, 'a', 1.2);
                          ^^^^
LINE 5:1: SELECT COALESCE(NULL, 'a', 1.2);
                                     ^^^
[ERROR] PATH:LINENUM DATE TIME: ERR_TYPE_MISMATCH: Type mismatch: left VARCHAR, right NUMERIC
LINE 6:1: SELECT COALESCE('a', 1.2, 1);
                          ^^^
LINE 6:1: SELECT COALESCE('a', 1.2, 1);
                               ^^^
[ERROR] PATH:LINENUM DATE TIME: ERR_TYPE_MISMATCH: Type mismatch: left INTEGER, right VARCHAR
LINE 7:1: SELECT COALESCE(NULL, 1, 'a');
                          ^^^^
LINE 7:1: SELECT COALESCE(NULL, 1, 'a');
                                   ^^^
